--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,13 @@ kiwisolver==1.4.8
 matplotlib==3.10.3
 numpy==2.3.1
 packaging==25.0
+pandas==2.3.0
 pillow==11.2.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pytz==2025.2
 requests==2.32.4
 six==1.17.0
+tzdata==2025.2
 urllib3==2.5.0
