--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,73 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiohttp-retry==2.9.1
+aiosignal==1.4.0
+astroid==3.3.10
+attrs==25.3.0
+blinker==1.9.0
+bottle==0.13.3
 certifi==2025.6.15
+cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.2.1
+clr_loader==0.2.7.post0
+colorama==0.4.6
 contourpy==1.3.2
+cowsay==6.1
 customtkinter==5.2.2
 cycler==0.12.1
 darkdetect==0.8.0
+dill==0.4.0
 dotenv==0.9.9
+Flask==3.1.1
 fonttools==4.58.4
+frozenlist==1.7.0
+geographiclib==2.0
+geopy==2.4.1
 idna==3.10
+iniconfig==2.1.0
+isort==6.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.1
 kiwisolver==1.4.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 matplotlib==3.10.3
+mccabe==0.7.0
+mdurl==0.1.2
+multidict==6.6.3
 numpy==2.3.1
 packaging==25.0
 pandas==2.3.0
 pillow==11.2.1
+platformdirs==4.3.8
+pluggy==1.6.0
+propcache==0.3.2
+proxy_tools==0.1.0
+pyan3==1.2.0
+pycparser==2.22
+pydeps==3.0.1
+Pygments==2.19.1
+PyJWT==2.10.1
+pylint==3.3.7
 pyparsing==3.2.3
+pytest==8.4.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pythonnet==3.0.5
 pytz==2025.2
+pywebview==5.4
 requests==2.32.4
+rich==14.0.0
+schedule==1.2.2
+seaborn==0.13.2
 six==1.17.0
+stdlib-list==0.11.1
+tomlkit==0.13.3
+twilio==9.6.5
+typing_extensions==4.14.0
 tzdata==2025.2
 urllib3==2.5.0
+Werkzeug==3.1.3
+yarl==1.20.1
