--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ astroid==3.3.10
 attrs==25.3.0
 blinker==1.9.0
 bottle==0.13.3
+cattrs==25.1.1
 certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
@@ -17,17 +18,23 @@ cowsay==6.1
 customtkinter==5.2.2
 cycler==0.12.1
 darkdetect==0.8.0
+decorator==5.2.1
 dill==0.4.0
 dotenv==0.9.9
 Flask==3.1.1
+flatbuffers==25.2.10
 fonttools==4.58.4
 frozenlist==1.7.0
+future==1.0.0
+geocoder==1.38.1
 geographiclib==2.0
 geopy==2.4.1
+h11==0.16.0
 idna==3.10
 iniconfig==2.1.0
 isort==6.0.1
 itsdangerous==2.2.0
+jh2==5.0.9
 Jinja2==3.1.6
 joblib==1.5.1
 kiwisolver==1.4.8
@@ -37,7 +44,10 @@ matplotlib==3.10.3
 mccabe==0.7.0
 mdurl==0.1.2
 multidict==6.6.3
+niquests==3.14.1
 numpy==2.3.1
+openmeteo_requests==1.5.0
+openmeteo_sdk==1.20.1
 packaging==25.0
 pandas==2.3.0
 pillow==11.2.1
@@ -52,22 +62,32 @@ Pygments==2.19.1
 PyJWT==2.10.1
 pylint==3.3.7
 pyparsing==3.2.3
+pyperclip==1.9.0
 pytest==8.4.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pythonnet==3.0.5
 pytz==2025.2
 pywebview==5.4
+pywin32==311
+qh3==1.5.3
+ratelim==0.1.6
 requests==2.32.4
+requests-cache==1.2.1
+retry-requests==2.0.0
 rich==14.0.0
 schedule==1.2.2
 seaborn==0.13.2
 six==1.17.0
 stdlib-list==0.11.1
+tkintermapview==1.29
 tomlkit==0.13.3
 twilio==9.6.5
 typing_extensions==4.14.0
 tzdata==2025.2
+url-normalize==2.2.1
 urllib3==2.5.0
+urllib3-future==2.13.900
+wassima==1.2.2
 Werkzeug==3.1.3
 yarl==1.20.1
